# buildit

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  diff-deb-new.sh  diff-deb.sh  start_jaeger.sh
.github/workflows/: ci.yml
buildit-utils/: Cargo.toml
buildit-utils/src/: github.rs  lib.rs  template.md
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: .gitignore  index.html  package.json  tsconfig.json
frontend/src/: App.vue  common.ts
frontend/src/components/: JobStatusIconLink.vue
frontend/src/pages/: index.vue  jobs.vue  pipelines.vue  workers.vue
frontend/src/pages/jobs/: [id].vue  index.vue
frontend/src/pages/monitor/: [hostname].vue
frontend/src/pages/pipelines/: [id].vue  index.vue
frontend/src/pages/web-logs/: [name].vue
frontend/src/pages/workers/: [id].vue  index.vue
rabbitmq/: docker-compose.yml
scripts/: builditctl.bash  restart-all-worker.sh  servers.list
server/: Cargo.toml
server/migrations/2024-03-10-023419_create_pipelines/: down.sql  up.sql
server/migrations/2024-03-10-024754_create_jobs/: down.sql  up.sql
server/migrations/2024-03-10-031737_create_workers/: down.sql  up.sql
server/migrations/2024-03-10-131445_add_source_to_pipelines/: down.sql  up.sql
server/migrations/2024-03-10-132438_add_github_check_run_id_to_jobs/: down.sql  up.sql
server/migrations/2024-03-10-144712_add_constraint_to_workers/: down.sql  up.sql
server/migrations/2024-03-10-145706_add_last_heartbeat_time_to_workers/: down.sql  up.sql
server/migrations/2024-03-10-153727_add_result_to_jobs/: down.sql  up.sql
server/migrations/2024-03-10-154337_add_error_message_to_jobs/: down.sql  up.sql
server/migrations/2024-03-10-155259_add_elapsed_secs_to_jobs/: down.sql  up.sql
server/migrations/2024-03-10-162811_add_assigned_worker_id_to_jobs/: down.sql  up.sql
server/migrations/2024-03-13-015859_add_built_by_worker_id_to_jobs/: down.sql  up.sql
server/migrations/2024-03-15-050949_create_users/: up.sql
server/migrations/2024-03-16-091643_add_creator_user_id_to_pipelines/: down.sql  up.sql
server/migrations/2024-03-16-141223_rename_assigned_to_running/: down.sql  up.sql
server/migrations/2024-03-16-142045_split_finished_into_success_and_failed/: down.sql  up.sql
server/migrations/2024-03-17-074037_add_disk_free_space_bytes_to_workers/: down.sql  up.sql
server/migrations/2024-03-21-053231_add_requirements_to_jobs/: down.sql  up.sql
server/migrations/2024-03-22-073305_add_performance_to_workers/: down.sql  up.sql
server/migrations/2024-04-04-091523_add_assign_time_to_jobs/: down.sql  up.sql
server/migrations/2024-06-01-023909_add_visible_to_workers/: down.sql  up.sql
server/migrations/2024-06-04-020234_add_internet_connectivity_to_workers/: down.sql  up.sql
server/migrations/2025-07-04-132107_add_user_token/: down.sql  up.sql
server/migrations/2025-09-03-093854_add_with_topics_to_jobs/: down.sql  up.sql
server/src/: api.rs  bot.rs  formatter.rs  github.rs  github_webhooks.rs  heartbeat.rs  job.rs  lib.rs  main.rs  models.rs  recycler.rs  routes.rs  schema.rs  utils.rs
server/src/routes/: job.rs  mod.rs  pipeline.rs  user.rs  webhook.rs  websocket.rs  worker.rs
src/: lib.rs
systemd/: buildit-server.service  buildit-worker.service
worker/: Cargo.toml  build.rs
worker/src/: build.rs  heartbeat.rs  lib.rs  main.rs  websocket.rs
