[package]
name = "buildit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.10.1"
futures = "0.3.29"
lapin = "2.3.1"
log = "0.4.20"
once_cell = "1.18.0"
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
