[package]
name = "buildit-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.38.0"
jsonwebtoken = "9"
anyhow = "1"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "process", "sync", "fs"] }
gix = { version = "0.63", default-features = false, features = ["revision"] }
walkdir = "2.4.0"
abbs-meta-apml = { git = "https://github.com/AOSC-Dev/abbs-meta-rs", package = "abbs-meta-apml", rev = "4a592937b44e8bb93103edd34eff384169a3248a" }
fancy-regex = "0.13"
thiserror ="1.0"
tracing = "0.1.40"
once_cell = "1.19.0"
abbs-update-checksum-core = { git = "https://github.com/AOSC-Dev/abbs-update-checksum", package = "abbs-update-checksum-core", rev = "9c4d07e384b0e66d388f91ff936dc20298f9976a" }
