[package]
name = "buildit-utils"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.44"
jsonwebtoken = "9"
anyhow = "1"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "process", "sync", "fs"] }
gix = { version = "0.72", default-features = false, features = ["revision"] }
walkdir = "2.4.0"
abbs-meta-apml = { git = "https://github.com/AOSC-Dev/abbs-meta-rs", package = "abbs-meta-apml", rev = "4a592937b44e8bb93103edd34eff384169a3248a" }
fancy-regex = "0.14"
thiserror ="2"
tracing = "0.1.40"
once_cell = "1.19.0"
abbs-update-checksum-core = { git = "https://github.com/AOSC-Dev/abbs-update-checksum", package = "abbs-update-checksum-core", tag = "v0.4.1" }
regex = "1.11.1"
