[package]
name = "buildit-utils"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.49"
jsonwebtoken = "10"
anyhow = "1"
tokio = { version = "1.50", features = ["macros", "rt-multi-thread", "process", "sync", "fs"] }
gix = { version = "0.80", default-features = false, features = ["revision"] }
walkdir = "2.5.0"
abbs-meta-apml = { git = "https://github.com/AOSC-Dev/abbs-meta-rs", package = "abbs-meta-apml", rev = "4a592937b44e8bb93103edd34eff384169a3248a" }
fancy-regex = "0.17"
thiserror ="2"
tracing = "0.1.44"
once_cell = "1.21.4"
abbs-update-checksum-core = { git = "https://github.com/AOSC-Dev/abbs-update-checksum", package = "abbs-update-checksum-core", tag = "v0.4.1" }
regex = "1.12.3"
