[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buildit-utils = { path = "../buildit-utils" }
tokio = "1.35.1"
eyre = "0.6"
clap = { version = "4.4.11", features = ["derive", "env"] }
dirs-next = "2.0.0"


[[bin]]
path = "./src/main.rs"
name = "bi"
