[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buildit-utils = { path = "../buildit-utils" }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "fs"] }
eyre = "0.6"
clap = { version = "4.5.1", features = ["derive", "env"] }
dirs-next = "2.0.0"
dialoguer = "0.11.0"
serde_json = "1.0.113"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
path = "./src/main.rs"
name = "bi"
