[package]
name = "common"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
lapin = "2.3.1"
serde = { version = "1.0.193", features = ["derive"] }
teloxide = { version = "0.12.2", features = ["macros"] }

[build-dependencies]
vergen = { version = "8.2.6", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }