[package]
name = "server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive", "env"] }
common = { path = "../common" }
dotenvy = "0.15.7"
octocrab = "0.44"
once_cell = "1.21.3"
reqwest = "0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
teloxide = { version = "0.16", features = ["macros"] }
timeago = { version = "0.4.2", features = ["chrono"] }
tokio = { version = "1.46.0", features = ["macros", "rt-multi-thread", "process", "sync", "time"] }
console = "0.16.0"
buildit-utils = { path = "../buildit-utils" }
jsonwebtoken = "9.3.1"
size = "0.5"
dickens = { git = "https://github.com/AOSC-Dev/dickens.git", version = "0.1.0" }
axum = { version = "0.8", features = ["ws"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
tower-http = { version = "0.6", features = ["trace", "fs", "cors"] }
diesel = { version = "2.2.11", features = ["postgres", "chrono", "r2d2", "numeric"] }
bigdecimal = { version = "0.4.8", features = ["serde"] }
opentelemetry = "0.30.0"
tracing-opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.30.0", features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
rand = "0.9"
hyper-util = "0.1.14"
hyper = "1.6.0"
tower = "0.5"
futures = "0.3.31"
