[package]
name = "server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive", "env"] }
common = { path = "../common" }
dotenvy = "0.15.0"
octocrab = "0.44"
once_cell = "1.19.0"
reqwest = "0.12"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
teloxide = { version = "0.17", features = ["macros"] }
timeago = { version = "0.5", features = ["chrono"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "process", "sync", "time"] }
console = "0.16"
buildit-utils = { path = "../buildit-utils" }
jsonwebtoken = "9.2.0"
size = "0.5"
dickens = { git = "https://github.com/AOSC-Dev/dickens.git", version = "0.1.0" }
axum = { version = "0.8", features = ["ws"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
tower-http = { version = "0.6", features = ["trace", "fs", "cors"] }
diesel = { version = "2.2.9", features = ["postgres", "chrono", "r2d2", "numeric"] }
bigdecimal = { version = "0.4.3", features = ["serde"] }
opentelemetry = "0.22.0"
tracing-opentelemetry = "0.23.0"
opentelemetry-otlp = { version = "0.15.0", features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
rand = "0.9"
hyper-util = "0.1.5"
hyper = "1.3.1"
tower = "0.5"
futures = "0.3.30"
