[package]
name = "server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive", "env"] }
common = { path = "../common" }
dotenvy = "0.15.7"
octocrab = "0.49"
once_cell = "1.21.4"
reqwest = { version = "0.13", features = ["multipart", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
teloxide = { version = "0.17", features = ["macros"] }
timeago = { version = "0.6", features = ["chrono"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "process", "sync", "time"] }
buildit-utils = { path = "../buildit-utils" }
jsonwebtoken = "10.3.0"
size = "0.5"
dickens = { git = "https://github.com/AOSC-Dev/dickens.git", version = "0.1.0" }
axum = { version = "0.8", features = ["ws"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing = "0.1.44"
tower-http = { version = "0.6", features = ["trace", "fs", "cors"] }
diesel = { version = "2.3.7", features = ["postgres", "chrono", "r2d2", "numeric"] }
bigdecimal = { version = "0.4.10", features = ["serde"] }
opentelemetry = "0.31.0"
tracing-opentelemetry = "0.32.1"
opentelemetry-otlp = { version = "0.31.1", features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
rand = "0.10"
hyper-util = "0.1.20"
hyper = "1.8.1"
tower = "0.5"
futures = "0.3.32"
text-splitter = "0.29"
