[package]
name = "worker"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive", "env"] }
common = { path = "../common" }
dotenv = "0.15.0"
env_logger = "0.11.2"
fs2 = "0.4.3"
gethostname = "0.4.3"
log = "0.4.20"
num_cpus = "1.16.0"
reqwest = { version = "0.11.24", features = ["json"] }
sysinfo = "0.30.5"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "process", "sync", "fs"] }
tokio-tungstenite = { version = "0.21.0", features = ["rustls", "rustls-tls-native-roots"] }
futures-util = "0.3.30"
flume = "0.11.0"
tungstenite = { version = "0.21.0", features = ["rustls"] }

[build-dependencies]
vergen = { version = "8.3.1", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }
