[package]
name = "worker"
version = "0.1.0"
edition = "2024"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive", "env"] }
common = { path = "../common" }
dotenvy = "0.15.7"
env_logger = "0.11.9"
fs2 = "0.4.3"
gethostname = "1"
log = "0.4.29"
num_cpus = "1.17.0"
reqwest = { version = "0.13", default-features = false, features = ["json", "charset", "http2", "system-proxy", "rustls-no-provider"]}
sysinfo = "0.38"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "process", "sync", "fs"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls", "rustls-tls-native-roots"] }
futures-util = "0.3.32"
flume = "0.12.0"
tungstenite = { version = "0.29.0", features = ["rustls"] }
rustls = { version = "0.23.37", default-features = false, features = ["brotli", "logging", "prefer-post-quantum", "ring", "std", "tls12"] }

[build-dependencies]
vergen-gitcl = { version = "9.1.0", features = ["build", "cargo", "rustc", "si"] }
